add a feature to load content in the current page using querySelectorAll, and fetch.

--- a/basic/cssBasic.html
+++ b/basic/cssBasic.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>CSS</title>
+        <link rel="stylesheet" href="cssBasic.css">
         <style>
             h1{
                 font-size: 20px;
@@ -10,14 +11,6 @@
             }
             .bold{
                 font-weight: bold;
-            }
-            #mainText{
-                font-size: 40px;
-                font-weight: bold;
-                color: white;
-                background-color: #444;
-                padding: 10px;
-                margin-bottom: 50px;
             }
         </style>
     </head>
