--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Exercises</title>
+    <style>
+        #content{
+            padding: 30px, 4px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -12,8 +17,9 @@
         </h1>
     </header>  
     <nav>
-        <a href  wm-nav="exercises/test.html">01 - Teste</a> <!--it loads a new page-->
-        <a href  wm-nav="exercises/test2.html">02 - Teste</a> 
+        <a href  wm-nav="exercises/test.html">01 - Text</a> <!--it loads a new page-->
+        <a href  wm-nav="exercises/text2.html">02 - Text</a> 
+        <a href  wm-nav="exercises/text3.html">03 - Text</a> 
     </nav>  
     <section id="content"></section>
     <footer>
