[feat] add links -Links to access external sites; -Links to go to the BOTTOM and to the TOP of the page.

--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,9 @@
         <a href  wm-nav="exercises/test.html">01 - Text</a> <!--it loads a new page-->
         <a href  wm-nav="exercises/text2.html">02 - Text</a> 
         <a href  wm-nav="exercises/text3.html">03 - Text</a> 
-        <a href  wm-nav="exercises/lists.html">01 - Lists</a> 
-        <a href  wm-nav="exercises/lists2.html">02 - Lists</a> 
+        <a href  wm-nav="exercises/lists.html">04 - Lists</a> 
+        <a href  wm-nav="exercises/lists2.html">05 - Lists</a> 
+        <a href  wm-nav="exercises/links.html">06 - Links</a> 
     </nav>  
     <section id="content"></section>
     <footer>
