--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
         <a href  wm-nav="exercises/lists.html">04 - Lists</a> 
         <a href  wm-nav="exercises/lists2.html">05 - Lists</a> 
         <a href  wm-nav="exercises/links.html">06 - Links</a> 
+        <a href  wm-nav="exercises/sheets.html">07 - Sheets</a> 
     </nav>  
     <section id="content"></section>
     <footer>
