--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
         <a href  wm-nav="exercises/lists2.html">05 - Lists</a> 
         <a href  wm-nav="exercises/links.html">06 - Links</a> 
         <a href  wm-nav="exercises/sheets.html">07 - Sheets</a> 
+        <a href  wm-nav="exercises/form/form.html">08 - Form</a> 
     </nav>  
     <section id="content"></section>
     <footer>
