--- a/html/exercises/form/form.html
+++ b/html/exercises/form/form.html
@@ -1,7 +1,6 @@
 <h1>Form</h1>
-<!-- app.post('/users') like in sereer.js -->
-<!-- app.listen(3003) -->
-<form action="http://localhost:3003/users" method="POST">  
+<form method="POST">  
+    <input type="hidden" name="id" value="3">
     <!-- nameUser is the the key -->
     <input type="text" name="nameUser">
     <input type="password" name="passworduser">
@@ -31,7 +30,10 @@
         <option value="C++">C++</option>
     </select>
 
-    <button>Include</button>
+<!-- app.post('/users') like in sereer.js -->
+<!-- app.listen(3003) -->
+    <button formaction="http://localhost:3003/users">Include</button>
+    <button formaction="http://localhost:3003/users/3">Change</button>
 </form>
 
 <style>
