--- a/html/exercises/form/form.html
+++ b/html/exercises/form/form.html
@@ -1,4 +1,5 @@
 <h1>Form</h1>
+<!-- if is GET, SEND IN THE URL -->
 <form method="POST">  
     <input type="hidden" name="id" value="3">
     <!-- nameUser is the the key -->
