Insert new exercises about image

--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,8 @@
         <a href  wm-nav="exercises/links.html">06 - Links</a> 
         <a href  wm-nav="exercises/sheets.html">07 - Sheets</a> 
         <a href  wm-nav="exercises/form/form.html">08 - Form</a> 
+        <a href  wm-nav="exercises/images.html">09 - Images</a> 
+        <a href  wm-nav="exercises/imagesSlide.html">10 - Images</a> 
     </nav>  
     <section id="content"></section>
     <footer>
