add feature of videos.

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
         <a href  wm-nav="exercises/form/form.html">08 - Form</a> 
         <a href  wm-nav="exercises/images.html">09 - Images</a> 
         <a href  wm-nav="exercises/imagesSlide.html">10 - Images</a> 
+        <a href  wm-nav="exercises/video.html">11 - Video</a> 
     </nav>  
     <section id="content"></section>
     <footer>
